--- a/app/src/main/res/layout/item_character_spinner.xml
+++ b/app/src/main/res/layout/item_character_spinner.xml
@@ -15,7 +15,8 @@
         android:id="@+id/txt_char_name"
         android:layout_width="312dp"
         android:layout_height="66dp"
-        android:fontFamily="@font/prstartk"
+        android:fontFamily="@font/bungee"
+        android:textSize="18dp"
         android:gravity="center_vertical"
         android:padding="20dp"
         android:text="Test"
