--- a/app/src/main/res/drawable/custom_edit_text.xml
+++ b/app/src/main/res/drawable/custom_edit_text.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <corners android:radius="4dp"/>
-    <stroke android:color="#0E450D"
+    <stroke android:color="#71db77"
         android:width="2dp"/>
 
     <solid android:color="#7fffffff"/>
