--- a/app/src/main/res/layout/activity_custom_deck.xml
+++ b/app/src/main/res/layout/activity_custom_deck.xml
@@ -12,8 +12,8 @@
         android:id="@+id/txt_deck_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/prstartk"
-        android:padding="20dp"
+        android:fontFamily="@font/bungee"
+        android:padding="15dp"
         android:textSize="18dp"
         android:textColor="#0E450D"/>
 
@@ -39,12 +39,12 @@
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
-            android:fontFamily="@fnt/prstartk"
+            android:fontFamily="@font/bungee"
             android:text="Add Card"
             android:textColor="@android:color/white"
             android:onClick="openAddCard"
             android:layout_weight="1"
-            android:textSize="13dp"/>
+            android:textSize="15dp"/>
 
         <Button
             android:id="@+id/btn_save"
@@ -53,12 +53,12 @@
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
-            android:fontFamily="@font/prstartk"
+            android:fontFamily="@font/bungee"
             android:text="Save"
             android:textColor="@android:color/white"
             android:onClick="saveCustomDeck"
             android:layout_weight="1"
-            android:textSize="13dp"/>
+            android:textSize="15dp"/>
 
 
         <Button
@@ -67,12 +67,12 @@
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
-            android:fontFamily="@font/prstartk"
+            android:fontFamily="@font/bungee"
             android:onClick="closeCustomDeck"
             android:text="Close"
             android:textColor="@android:color/white"
             android:layout_weight="1"
-            android:textSize="13dp"/>
+            android:textSize="15dp"/>
 
     </LinearLayout>
 
