--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:background="#D8D47D"
+        android:layout_margin="5dp"
+        android:background="@drawable/custom_edit_text"
         >
 
         <LinearLayout
@@ -141,44 +142,64 @@
         </LinearLayout>
     </LinearLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_gravity="center"
-        >
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="390sp"
-            android:layout_height= "405dp"
+        <TextView
+            android:id="@+id/txt_scenario"
+            android:layout_width="350dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/cardbg"
-            />
+            android:text="TextView"
+            android:fontFamily="@font/pokemon"
+            android:gravity="bottom|center"
+            android:justificationMode="inter_word"
+            android:lineSpacingExtra="10dp"
+            android:padding="10dp"
+            android:layout_margin="5dp"
+            android:textColor="#030303"/>
 
-        <com.yuyakaido.android.cardstackview.CardStackView
-            android:id="@+id/card_stack_view"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:padding="4dp"
-            android:background="@android:color/transparent"/>
+            android:layout_height="420dp"
+            android:layout_gravity="center">
 
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="390sp"
+                android:layout_height= "420sp"
+                android:layout_gravity="center"
+                android:background="@drawable/cardbg"
+                />
 
-    </FrameLayout>
+            <com.yuyakaido.android.cardstackview.CardStackView
+                android:id="@+id/card_stack_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:padding="4dp" />
+        </FrameLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="#D8D47D">
+        android:layout_margin="5dp"
+        android:background="@drawable/custom_edit_text"
+        >
 
         <TextView
             android:id="@+id/player_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="@font/prstartk"
+            android:fontFamily="@font/bungee"
+            android:textSize="18dp"
             android:padding="10dp"
             android:text="TextView"
             android:textColor="#0E450D" />
@@ -188,7 +209,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:fontFamily="@font/prstartk"
+            android:fontFamily="@font/bungee"
+            android:textSize="18dp"
             android:gravity="right"
             android:padding="10dp"
             android:text="TextView"
