--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SignUpActivity"
     android:gravity="center"
@@ -13,12 +13,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/prstartk"
+        android:fontFamily="@font/bungee"
         android:gravity="center"
-        android:padding="20dp"
+        android:padding="10dp"
         android:text="Create an Account"
         android:textColor="#0E450D"
-        android:textSize="15dp"
+        android:textSize="20dp"
         />
 
     <EditText
@@ -52,9 +52,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/button_shape"
-        android:fontFamily="@font/prstartk"
+        android:fontFamily="@font/bungee"
         android:text="Sign Up"
         android:textColor="@android:color/white"
-        android:textSize="13dp"/>
+        android:textSize="18dp"/>
 
 </LinearLayout>
