--- a/app/src/main/res/layout/dialog_leaderboard.xml
+++ b/app/src/main/res/layout/dialog_leaderboard.xml
@@ -6,22 +6,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".LeaderboardDialog"
-    android:background="#f4f3d7">
+    android:background="@drawable/bg3">
 
     <TextView
         android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Leaderboard"
-        android:padding="20dp"
-        android:fontFamily="@font/prstartk"
-        android:textSize="20dp"
-        android:textColor="#0E450D"/>
+        android:padding="10dp"
+        android:fontFamily="@font/bungee"
+        android:textSize="25dp"
+        android:textColor="#71db77"/>
 
     <ListView
         android:id="@+id/leaderboard_list_view"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="490dp"
         android:layout_margin="10dp"
         android:divider="@android:color/transparent"
         android:dividerHeight="10sp" />
@@ -31,11 +31,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_shape"
-        android:fontFamily="@font/prstartk"
+        android:fontFamily="@font/bungee"
         android:textColor="@android:color/white"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:text="Close"
-        android:textSize="13dp"/>
+        android:textSize="15dp"/>
 
 </LinearLayout>
