--- a/app/src/main/res/layout/dialog_new_deck.xml
+++ b/app/src/main/res/layout/dialog_new_deck.xml
@@ -11,7 +11,8 @@
         android:text="Deck Name"
         android:padding="10dp"
         android:textColor="#0E450D"
-        android:fontFamily="@font/prstartk"/>
+        android:fontFamily="@font/bungee"
+        android:textSize="18dp"/>
 
     <EditText
         android:id="@+id/etxt_deck_name"
@@ -32,8 +33,8 @@
         android:text="Create Deck"
         android:background="@drawable/button_shape"
         android:textColor="@android:color/white"
-        android:fontFamily="@font/prstartk"
-        android:layout_margin="10dp"
-        android:textSize="13dp"/>
+        android:fontFamily="@font/bungee"
+        android:textSize="15dp"
+        android:layout_margin="10dp" />
 
 </LinearLayout>
