--- a/app/src/main/res/layout/item_leaderboard.xml
+++ b/app/src/main/res/layout/item_leaderboard.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/custom_edit_text"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/txt_rank"
@@ -13,7 +12,7 @@
         android:layout_weight="1"
         android:fontFamily="@font/pokemon"
         android:gravity="center"
-        android:padding="10dp"
+        android:padding="5dp"
         android:text="100"
         android:textColor="#0E450D" />
 
@@ -22,10 +21,12 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:fontFamily="@font/prstartk"
+        android:fontFamily="@font/bungee"
         android:gravity="center"
         android:padding="10dp"
+        android:layout_margin="5dp"
         android:text="rarararara"
+        android:textSize="15dp"
         android:textColor="#0E450D" />
 
     <TextView
@@ -35,7 +36,7 @@
         android:layout_weight="1"
         android:fontFamily="@font/pokemon"
         android:gravity="center"
-        android:padding="10dp"
+        android:padding="5dp"
         android:text="10000"
         android:textColor="#0E450D" />
 </LinearLayout>
