--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,10 +63,12 @@
         android:layout_width="310dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/button_google_login"
         android:fontFamily="@font/bungee"
         android:text="Sign in with Google"
-        android:textColor="#0E450D"
+        android:textColor="#7f7f7f"
+        android:drawableLeft="@drawable/google_icon"
+        android:paddingLeft="20dp"
         android:textSize="18dp" />
 
 
