--- a/app/src/main/res/layout/item_deck.xml
+++ b/app/src/main/res/layout/item_deck.xml
@@ -17,4 +17,28 @@
         android:textColor="#0E450D"
         android:textSize="15dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:fontFamily="@font/bungee"
+        android:padding="5dp"
+        android:text="by:"
+        android:textColor="#0E450D"
+        android:textSize="15dp"
+        android:gravity="end"/>
+
+
+    <TextView
+        android:id="@+id/txt_creator_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:fontFamily="@font/bungee"
+        android:padding="5dp"
+        android:text="TextView"
+        android:textColor="#0E450D"
+        android:textSize="15dp"
+        />
+
 </LinearLayout>
