--- a/app/src/main/res/layout/item_deck.xml
+++ b/app/src/main/res/layout/item_deck.xml
@@ -15,6 +15,6 @@
         android:padding="5dp"
         android:text="TextView"
         android:textColor="#0E450D"
-        android:textSize="15dp"/>
+        android:textSize="15dp"/>z
 
 </LinearLayout>
