--- a/app/src/main/res/layout/dialog_user_profile.xml
+++ b/app/src/main/res/layout/dialog_user_profile.xml
@@ -20,13 +20,11 @@
         android:gravity="center">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/view_profile_img"
+            android:id="@+id/view_profile_image"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_centerInParent="true"
-            android:scaleType="centerCrop"
-            android:gravity="center"
-            android:src="@drawable/andrew"
+            android:gravity="top"
             app:civ_border_color="#0E450D"
             app:civ_border_width="2dp" />
 
