--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,16 +163,14 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="420dp"
+            android:layout_height="440sp"
             android:layout_gravity="center">
 
             <ImageView
-                android:id="@+id/imageView3"
                 android:layout_width="390sp"
-                android:layout_height= "420sp"
+                android:layout_height="390sp"
                 android:layout_gravity="center"
-                android:background="@drawable/cardbg"
-                />
+                android:background="@drawable/cardbg" />
 
             <com.yuyakaido.android.cardstackview.CardStackView
                 android:id="@+id/card_stack_view"
@@ -182,6 +180,19 @@
                 android:background="@android:color/transparent"
                 android:padding="4dp" />
         </FrameLayout>
+
+        <TextView
+            android:id="@+id/txt_character_name"
+            android:layout_width="390sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="TextView"
+            android:fontFamily="@font/bungee"
+            android:textSize="18dp"
+            android:gravity="center"
+            android:padding="5dp"
+            android:layout_marginBottom="5dp"
+            android:textColor="#030303"/>
 
     </LinearLayout>
 
@@ -199,7 +210,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/bungee"
-            android:textSize="18dp"
+            android:textSize="15dp"
             android:padding="10dp"
             android:text="TextView"
             android:textColor="#0E450D" />
@@ -210,7 +221,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="@font/bungee"
-            android:textSize="18dp"
+            android:textSize="15dp"
             android:gravity="right"
             android:padding="10dp"
             android:text="TextView"
