--- a/app/src/main/res/layout/dialog_user_profile.xml
+++ b/app/src/main/res/layout/dialog_user_profile.xml
@@ -20,7 +20,7 @@
         android:gravity="center">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/view_profile_image"
+            android:id="@+id/view_profile_image_dialog"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_centerInParent="true"
@@ -29,7 +29,7 @@
             app:civ_border_width="2dp" />
 
         <TextView
-            android:id="@+id/view_profile_name"
+            android:id="@+id/view_profile_name_dialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -41,7 +41,7 @@
             android:textSize="18dp" />
 
         <TextView
-            android:id="@+id/view_profile_email"
+            android:id="@+id/view_profile_email_dialog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -53,7 +53,7 @@
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/btn_logout"
+            android:id="@+id/btn_logout_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
