--- a/app/src/main/res/layout/dialog_user_profile.xml
+++ b/app/src/main/res/layout/dialog_user_profile.xml
@@ -19,14 +19,14 @@
         android:padding="30dp"
         android:gravity="center">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/view_profile_image_dialog"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_centerInParent="true"
-            android:gravity="top"
-            app:civ_border_color="#0E450D"
-            app:civ_border_width="2dp" />
+<!--        <de.hdodenhof.circleimageview.CircleImageView-->
+<!--            android:id="@+id/view_profile_image_dialog"-->
+<!--            android:layout_width="90dp"-->
+<!--            android:layout_height="90dp"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:gravity="top"-->
+<!--            app:civ_border_color="#0E450D"-->
+<!--            app:civ_border_width="2dp" />-->
 
         <TextView
             android:id="@+id/view_profile_name_dialog"
