--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/txt_card_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
