--- a/app/src/main/res/layout/item_narration_card.xml
+++ b/app/src/main/res/layout/item_narration_card.xml
@@ -10,8 +10,8 @@
 
     <FrameLayout
         android:id="@+id/card"
-        android:layout_width="380sp"
-        android:layout_height="461dp"
+        android:layout_width="390sp"
+        android:layout_height="400sp"
         android:layout_gravity="center"
         android:foregroundGravity="center"
         android:background="@drawable/shape"
@@ -32,15 +32,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center">
-
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/cardImage"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="425dp"-->
-<!--                    android:layout_gravity="center"-->
-<!--                    android:padding="4dp"-->
-<!--                    android:scaleType="centerCrop" />-->
 
                 <TextView
                     android:id="@+id/txt_narration"
