--- a/app/src/main/res/layout/dialog_edit_deck.xml
+++ b/app/src/main/res/layout/dialog_edit_deck.xml
@@ -3,28 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="#f4f3d7">
+    android:background="#f4f3d7"
+    android:padding="20dp">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Change Deck Name"
-        android:fontFamily="@font/prstartk"
-        android:padding="10dp"
-        android:textColor="#0E450D"
-        android:gravity="center"/>
-
-    <EditText
         android:id="@+id/etxt_new_deck_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/custom_edit_text"
-        android:fontFamily="@font/pokemon"
-        android:maxLength="10"
-        android:maxLines="1"
-        android:padding="20dp"
-        android:textSize="10dp" />
+        android:fontFamily="@font/bungee"
+        android:padding="15dp"
+        android:textSize="18dp"
+        android:text="Hello"
+        android:textColor="#71db77"
+        android:gravity="center"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
-            android:fontFamily="@font/prstartk"
+            android:fontFamily="@font/bungee"
             android:layout_weight="1"
             android:text="Edit"
             android:textColor="@android:color/white"
@@ -51,18 +43,19 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
-            android:fontFamily="@font/prstartk"
+            android:fontFamily="@font/bungee"
             android:layout_weight="1"
             android:text="Play"
             android:textColor="@android:color/white"
             android:textSize="13dp"/>
 
         <Button
+            android:id="@+id/btn_delete_deck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@drawable/button_shape"
-            android:fontFamily="@font/prstartk"
+            android:fontFamily="@font/bungee"
             android:layout_weight="1"
             android:text="Delete"
             android:textColor="@android:color/white"/>
