--- a/app/src/main/res/layout/item_deck.xml
+++ b/app/src/main/res/layout/item_deck.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:background="@drawable/custom_edit_text">
+    android:layout_height="wrap_content"
+    android:background="@drawable/custom_edit_text"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"></LinearLayout>
 
     <TextView
         android:id="@+id/etxt_deck_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_weight="1"
@@ -15,30 +21,37 @@
         android:padding="5dp"
         android:text="TextView"
         android:textColor="#0E450D"
-        android:textSize="15dp"/>
+        android:textSize="15dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:fontFamily="@font/bungee"
-        android:padding="5dp"
-        android:text="by:"
-        android:textColor="#0E450D"
-        android:textSize="15dp"
-        android:gravity="end"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/bungee"
+            android:gravity="end"
+            android:padding="5dp"
+            android:text="by:"
+            android:textColor="#0E450D"
+            android:textSize="10dp" />
 
-    <TextView
-        android:id="@+id/txt_creator_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:fontFamily="@font/bungee"
-        android:padding="5dp"
-        android:text="TextView"
-        android:textColor="#0E450D"
-        android:textSize="15dp"
-        />
+        <TextView
+            android:id="@+id/txt_creator_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:fontFamily="@font/bungee"
+            android:padding="5dp"
+            android:text="TextView"
+            android:textColor="#0E450D"
+            android:textSize="10dp" />
+    </LinearLayout>
+
 
 </LinearLayout>
