--- a/app/src/main/res/layout/dialog_edit_deck.xml
+++ b/app/src/main/res/layout/dialog_edit_deck.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#f4f3d7"
     android:padding="20dp">
@@ -49,6 +50,21 @@
             android:textColor="@android:color/white"
             android:textSize="13dp"/>
 
+
+<!--        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton-->
+<!--            android:id="@+id/btn_play_deck"-->
+<!--            android:layout_width="150dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="5dp"-->
+<!--            android:background="@drawable/button_shape"-->
+<!--            android:fontFamily="@font/bungee"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="Play"-->
+<!--            android:textColor="@android:color/white"-->
+<!--            android:textSize="13dp"-->
+<!--            app:spinning_bar_width="4dp"-->
+<!--            app:spinning_bar_color="#FFF"-->
+<!--            app:spinning_bar_padding="13dp"/>-->
         <Button
             android:id="@+id/btn_delete_deck"
             android:layout_width="wrap_content"
