change font colors

--- a/app/src/main/res/layout/activity_deck_list.xml
+++ b/app/src/main/res/layout/activity_deck_list.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/bungee"
         android:padding="20dp"
         android:text="Custom Decks"
-        android:textColor="#0E450D"
+        android:textColor="#71db77"
         android:textSize="18dp" />
 
     <Spinner
