--- a/app/src/main/res/layout/dialog_create_card.xml
+++ b/app/src/main/res/layout/dialog_create_card.xml
@@ -16,7 +16,7 @@
         android:fontFamily="@font/bungee"
         android:textSize="15dp"
         android:padding="3dp"
-        android:textColor="#0E450D"/>
+        android:textColor="#71db77"/>
 
     <Spinner
         android:id="@+id/spinner_characters"
@@ -34,7 +34,7 @@
         android:fontFamily="@font/bungee"
         android:textSize="15dp"
         android:padding="3dp"
-        android:textColor="#0E450D"/>
+        android:textColor="#71db77"/>
 
     <EditText
         android:id="@+id/etxt_choice_left"
@@ -56,7 +56,7 @@
         android:fontFamily="@font/bungee"
         android:textSize="15dp"
         android:padding="3dp"
-        android:textColor="#0E450D"/>
+        android:textColor="#71db77"/>
 
     <EditText
         android:id="@+id/etxt_choice_right"
@@ -78,7 +78,7 @@
         android:fontFamily="@font/bungee"
         android:textSize="15dp"
         android:padding="3dp"
-        android:textColor="#0E450D"/>
+        android:textColor="#71db77"/>
 
     <EditText
         android:id="@+id/etxt_scenario"
@@ -102,7 +102,7 @@
         android:fontFamily="@font/bungee"
         android:textSize="15dp"
         android:padding="3dp"
-        android:textColor="#0E450D"/>
+        android:textColor="#71db77"/>
 
     <LinearLayout
         android:layout_width="match_parent"
