--- a/app/src/main/res/layout/dialog_leaderboard.xml
+++ b/app/src/main/res/layout/dialog_leaderboard.xml
@@ -16,7 +16,8 @@
         android:padding="10dp"
         android:fontFamily="@font/bungee"
         android:textSize="25dp"
-        android:textColor="#71db77"/>
+        android:textColor="#71db77"
+        android:gravity="center"/>
 
     <ListView
         android:id="@+id/leaderboard_list_view"
