--- a/app/src/main/res/layout/dialog_new_deck.xml
+++ b/app/src/main/res/layout/dialog_new_deck.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:text="Deck Name"
         android:padding="10dp"
-        android:textColor="#0E450D"
+        android:textColor="#71db77"
         android:fontFamily="@font/bungee"
         android:textSize="18dp"/>
 
