--- a/app/src/main/res/layout/dialog_user_profile.xml
+++ b/app/src/main/res/layout/dialog_user_profile.xml
@@ -37,7 +37,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:text="Name"
-            android:textColor="#0E450D"
+            android:textColor="#71db77"
             android:textSize="18dp" />
 
         <TextView
@@ -49,7 +49,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:text="Email"
-            android:textColor="#0E450D"
+            android:textColor="#71db77"
             android:textSize="18dp" />
 
         <Button
