--- a/app/src/main/res/layout/item_deck.xml
+++ b/app/src/main/res/layout/item_deck.xml
@@ -5,23 +5,16 @@
     android:background="@drawable/custom_edit_text"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"></LinearLayout>
-
     <TextView
         android:id="@+id/etxt_deck_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginLeft="7dp"
         android:layout_weight="1"
         android:fontFamily="@font/bungee"
-        android:padding="5dp"
         android:text="TextView"
         android:textColor="#0E450D"
-        android:textSize="15dp" />
+        android:textSize="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,10 +26,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
             android:fontFamily="@font/bungee"
             android:gravity="end"
-            android:padding="5dp"
             android:text="by:"
             android:textColor="#0E450D"
             android:textSize="10dp" />
@@ -45,10 +36,8 @@
             android:id="@+id/txt_creator_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
             android:fontFamily="@font/bungee"
-            android:padding="5dp"
             android:text="TextView"
             android:textColor="#0E450D"
             android:textSize="10dp" />
