--- a/app/src/main/res/layout/dialog_new_deck.xml
+++ b/app/src/main/res/layout/dialog_new_deck.xml
@@ -24,7 +24,8 @@
         android:inputType="textPersonName"
         android:gravity="center"
         android:background="@drawable/custom_edit_text"
-        android:textSize="15dp"/>
+        android:textSize="15dp"
+        android:textColor="#0E450D"/>
 
     <Button
         android:id="@+id/btn_create_new_deck"
