--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <padding
-        android:bottom="5dp"
-        android:left="5dp"
-        android:right="5dp"
-        android:top="5dp"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <size android:width="150dp"/>
-    <corners android:radius="10dp"/>
-    <solid android:color="#71db77"/>
+    <item android:state_enabled="true">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <padding
+                android:bottom="5dp"
+                android:left="5dp"
+                android:right="5dp"
+                android:top="5dp"/>
 
-</shape>
+            <size android:width="150dp"/>
+            <corners android:radius="10dp"/>
+            <solid android:color="#71db77"/>
+        </shape>
+    </item>
+
+    <item android:state_enabled="false">
+
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <padding
+                android:bottom="5dp"
+                android:left="5dp"
+                android:right="5dp"
+                android:top="5dp"/>
+
+            <size android:width="150dp"/>
+            <corners android:radius="10dp"/>
+            <solid android:color="#7f7f7f"/>
+
+        </shape>
+
+
+
+    </item>
+
+
+</selector>
