--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,7 +159,7 @@
             android:lineSpacingExtra="10dp"
             android:padding="10dp"
             android:layout_margin="5dp"
-            android:textColor="#030303"/>
+            android:textColor="#0E450D"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -192,7 +192,7 @@
             android:gravity="center"
             android:padding="5dp"
             android:layout_marginBottom="5dp"
-            android:textColor="#030303"/>
+            android:textColor="#0E450D"/>
 
     </LinearLayout>
 
