--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -33,7 +33,8 @@
         android:inputType="textEmailAddress"
         android:maxLength="30"
         android:padding="15dp"
-        android:textSize="12dp" />
+        android:textSize="12dp"
+        android:textColor="#0E450D"/>
 
     <EditText
         android:id="@+id/etxt_password_signup"
@@ -46,6 +47,7 @@
         android:inputType="textPassword"
         android:maxLength="30"
         android:padding="15dp"
+        android:textColor="#0E450D"
         android:textSize="12dp" />
 
     <Button
