--- a/app/src/main/res/layout/dialog_create_card.xml
+++ b/app/src/main/res/layout/dialog_create_card.xml
@@ -47,7 +47,8 @@
         android:maxLength="20"
         android:maxLines="1"
         android:padding="15dp"
-        android:textSize="10dp" />
+        android:textSize="10dp"
+        android:textColor="#0E450D"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -69,7 +70,8 @@
         android:maxLength="20"
         android:maxLines="1"
         android:padding="15dp"
-        android:textSize="10dp" />
+        android:textSize="10dp"
+        android:textColor="#0E450D"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -93,7 +95,8 @@
         android:inputType="textMultiLine"
         android:maxLines="3"
         android:padding="15dp"
-        android:textSize="10dp" />
+        android:textSize="10dp"
+        android:textColor="#0E450D"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -122,7 +125,8 @@
             android:inputType="numberSigned|number"
             android:maxLines="1"
             android:padding="10dp"
-            android:textSize="10dp" />
+            android:textSize="10dp"
+            android:textColor="#0E450D"/>
 
         <EditText
             android:id="@+id/etxt_social"
@@ -136,7 +140,8 @@
             android:inputType="numberSigned|number"
             android:maxLines="1"
             android:padding="10dp"
-            android:textSize="10dp" />
+            android:textSize="10dp"
+            android:textColor="#0E450D"/>
 
         <EditText
             android:id="@+id/etxt_grades"
@@ -150,7 +155,8 @@
             android:inputType="numberSigned|number"
             android:maxLines="1"
             android:padding="10dp"
-            android:textSize="10dp" />
+            android:textSize="10dp"
+            android:textColor="#0E450D"/>
 
         <EditText
             android:id="@+id/etxt_money"
@@ -164,7 +170,8 @@
             android:inputType="numberSigned|number"
             android:maxLines="1"
             android:padding="10dp"
-            android:textSize="10dp" />
+            android:textSize="10dp"
+            android:textColor="#0E450D"/>
 
     </LinearLayout>
 
