--- a/app/src/main/res/layout/dialog_player_name.xml
+++ b/app/src/main/res/layout/dialog_player_name.xml
@@ -28,7 +28,8 @@
         android:inputType="textPersonName"
         android:maxLength="10"
         android:padding="10dp"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:textColor="#0E450D"/>
 
     <Button
         android:id="@+id/btn_play"
