--- a/app/src/main/res/layout/dialog_new_deck.xml
+++ b/app/src/main/res/layout/dialog_new_deck.xml
@@ -25,7 +25,8 @@
         android:gravity="center"
         android:background="@drawable/custom_edit_text"
         android:textSize="15dp"
-        android:textColor="#0E450D"/>
+        android:textColor="#0E450D"
+        android:textCursorDrawable="@drawable/text_cursor"/>
 
     <Button
         android:id="@+id/btn_create_new_deck"
