--- a/app/src/main/res/layout/dialog_player_name.xml
+++ b/app/src/main/res/layout/dialog_player_name.xml
@@ -29,7 +29,8 @@
         android:maxLength="10"
         android:padding="10dp"
         android:textSize="15dp"
-        android:textColor="#0E450D"/>
+        android:textColor="#0E450D"
+        android:textCursorDrawable="@drawable/text_cursor"/>
 
     <Button
         android:id="@+id/btn_play"
